列表展示页面

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/login_backcolor"
     android:gravity="center"
-    tools:context=".ui.login.LoginFragment">
+    tools:context=".ui.LoginFragment">
 
     <ImageView
         android:id="@+id/logo"
