--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation"
+    app:startDestination="@id/loginFragment2">
 
+    <fragment
+        android:id="@+id/loginFragment2"
+        android:name="com.zhaoshuo.recode.ui.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_loginFragment2_to_blankFragment"
+            app:destination="@id/blankFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/blankFragment"
+        android:name="com.zhaoshuo.recode.ui.RecodesFragment"
+        android:label="fragment_blank"
+        tools:layout="@layout/fragment_recodes">
+      <argument
+          android:name="transaction"
+          android:defaultValue="@null"
+          app:argType="com.zhaoshuo.recode.logic.model.RecordResponse"
+          app:nullable="true"/>
+    </fragment>
 </navigation>
