--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="login_backcolor">#E5E5E5</color>
     <color name="button_color">#0E4D94</color>
     <color name="line">#DFE5EB</color>
+    <color name="status_bg">#ECFAFF</color>
 </resources>
