--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,11 @@
     <dimen name="fragment_vertical_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="margin_left">6dp</dimen>
+    <dimen name="ic_record_size">24dp</dimen>
+    <dimen name="ic_record_margin_start">17dp</dimen>
+    <dimen name="info_margin_start">44dp</dimen>
+    <dimen name="info_margin_top">13dp</dimen>
+    <dimen name="title_margin_top">23dp</dimen>
+    <dimen name="ic_record_margin_top">24dp</dimen>
+    <dimen name="record_head_margin_top">57dp</dimen>
 </resources>
